@@ -1,0 +1,17 @@
+!<arch>
+//                                              350       `
+file12345678901234567890.txt/
+file1234567890123456789012345678901234567890123456789012345678901234567890.txt/
+file123456789012345678901234567890123456789012345678901234567890.txt/
+file123456789012345678901234567890.txt/
+file1234567890.txt/
+file1234567890123456789012345678901234567890.txt/
+file12345678901234567890123456789012345678901234567890.txt/
+/0              1273319811  1721  1721  100664  0         `
+/30             1273319842  1721  1721  100664  0         `
+/110            1273319835  1721  1721  100664  0         `
+file.txt/       1273319777  1721  1721  100664  0         `
+/180            1273319817  1721  1721  100664  0         `
+/220            1273319794  1721  1721  100664  0         `
+/240            1273319823  1721  1721  100664  0         `
+/290            1273319828  1721  1721  100664  0         `
